# quadratic-kalman

./: .gitignore  LICENSE  README.md  pyproject.toml
quadratic_kalman/: __basic_kalman_for_reference.py  __init__.py  basic_kalman.py  reshaping_utils.py  unconstrained_quadratic_kalman.py  unconstraint_kalman_regression.py
quadratic_kalman/examples/: regression_through_time.py
templates/: header_template
tests/: test_basic_kalman.py  test_kalman_regression.py  test_reshaping_utils.py
tex_files/: main.tex
